<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Asteroides</string>
    <string name="play">Jugar</string>
    <string name="configure">Configurar</string>
    <string name="about">Acerca de</string>
    <string name="exit">Puntuaciones</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_acerca_de">AcercaDe</string>
    <string name="title_activity_preferencias">Preferencias</string>
    <string name="title_activity_puntuaciones">Puntuaciones</string>

</resources>